[gd_scene load_steps=19 format=3 uid="uid://dxltoqt1rsb2r"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_hybay"]
[ext_resource type="Resource" uid="uid://dix3vjsiu816s" path="res://Resourse/stand.tres" id="2_hqdk8"]
[ext_resource type="Resource" uid="uid://w0im2vt0hc0q" path="res://Resourse/walk.tres" id="3_uhy2w"]
[ext_resource type="Resource" uid="uid://dgscwtekjxqle" path="res://Resourse/crouch.tres" id="4_k8tvp"]
[ext_resource type="Resource" uid="uid://bvh5dhxjlcpp6" path="res://Resourse/run.tres" id="5_5epif"]
[ext_resource type="Script" path="res://Scripts/movement/player_movement.gd" id="5_tl4uw"]
[ext_resource type="PackedScene" uid="uid://hp3j6y5fvilp" path="res://Scenes/health_component.tscn" id="6_27hf7"]
[ext_resource type="Script" path="res://Scripts/noise_area.gd" id="7_sess5"]
[ext_resource type="Script" path="res://Scripts/control(UI_HUD)/HUD_Players.gd" id="9_dc0lc"]
[ext_resource type="PackedScene" uid="uid://b3eaxjmmf8qe0" path="res://Scenes/death_pause.tscn" id="10_6pgdm"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_x85kv"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_iehgv"]

[sub_resource type="SphereShape3D" id="SphereShape3D_6f56w"]
radius = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8kis"]
bg_color = Color(0.230315, 0.230315, 0.230315, 0.811765)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iv5xy"]
bg_color = Color(0.207872, 0.415245, 0.323932, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.129558, 0.129559, 0.129558, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="Animation" id="Animation_sydw8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.952941, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/neck/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_1j6cq"]
resource_name = "took_damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HUD/CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.952941, 0, 0, 0), Color(0.952941, 0, 0, 0.392157), Color(0.952941, 0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("head/neck/Camera3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.0608688, 0.119006, 0.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, -0.139626), Vector3(0, 0, 0.261799), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xovne"]
_data = {
"RESET": SubResource("Animation_sydw8"),
"took_damage": SubResource("Animation_1j6cq")
}

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("movement") groups=["Player"]]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_hybay")
movement = NodePath("movement")
death_ui = ExtResource("10_6pgdm")
states = {
"crouch": ExtResource("4_k8tvp"),
"run": ExtResource("5_5epif"),
"stand": ExtResource("2_hqdk8"),
"walk": ExtResource("3_uhy2w")
}

[node name="movement" type="Node" parent="." node_paths=PackedStringArray("Player")]
script = ExtResource("5_tl4uw")
Player = NodePath("..")

[node name="mesh" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_x85kv")

[node name="colli" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("CapsuleShape3D_iehgv")

[node name="head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.654015, 0)

[node name="neck" type="Node3D" parent="head"]

[node name="Camera3D" type="Camera3D" parent="head/neck"]

[node name="noise_area" type="Area3D" parent="."]
collision_mask = 3
script = ExtResource("7_sess5")

[node name="CollisionShape3D" type="CollisionShape3D" parent="noise_area"]
shape = SubResource("SphereShape3D_6f56w")

[node name="HUD" type="Control" parent="."]
process_priority = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("9_dc0lc")

[node name="CanvasLayer" type="CanvasLayer" parent="HUD"]

[node name="Label" type="Label" parent="HUD/CanvasLayer"]
anchors_preset = -1
anchor_top = 0.92
anchor_right = 0.058
anchor_bottom = 0.955
offset_left = 11.0
offset_top = -0.160034
offset_right = 0.183998
offset_bottom = 0.159973
grow_vertical = 0
text = "Health:"

[node name="health_bar" type="ProgressBar" parent="HUD/CanvasLayer"]
anchors_preset = -1
anchor_left = 0.068
anchor_top = 0.921
anchor_right = 0.324
anchor_bottom = 0.963
offset_left = -0.336006
offset_top = 0.191956
offset_right = -0.247986
offset_bottom = -0.0240479
grow_vertical = 0
theme_override_styles/background = SubResource("StyleBoxFlat_r8kis")
theme_override_styles/fill = SubResource("StyleBoxFlat_iv5xy")
value = 50.0

[node name="ColorRect" type="ColorRect" parent="HUD/CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.952941, 0, 0, 0)

[node name="health_component" parent="." instance=ExtResource("6_27hf7")]

[node name="HUD_anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xovne")
}

[connection signal="set_direction" from="." to="movement" method="_on_player_set_direction"]
[connection signal="set_direction" from="." to="noise_area" method="_on_player_set_direction"]
[connection signal="set_movement_state" from="." to="movement" method="_on_player_set_movement_state"]
[connection signal="set_movement_state" from="." to="noise_area" method="_on_player_set_movement_state"]
[connection signal="took_damage" from="health_component" to="HUD" method="_on_health_component_took_damage"]
